Hero and sections titles

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <script src="https://use.typekit.net/ukj1ccd.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css(.) styles/vendor.css -->
@@ -26,6 +28,73 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+
+    <section class="Hero Panel">
+      <div class="Logo"></div>
+
+      <div class="Hero-title">
+        <div class="Hero-titleSans">
+          BRIDGING
+        </div>
+
+        <div class="Hero-titleSerif">
+          Portugal and Silicon Valley
+        </div>
+      </div>
+
+      <p class="Hero-content">
+        Portuguese entrepreneurs discovered half of the world during the age of discovery. Now it's time to help the world discover portugal and its modern-day entrepreneurs.
+      </p>
+    </section>
+
+    <section class="Panel">
+      <div class="Panel-title">
+        <div class="Panel-titleImage"></div>
+        <div class="Panel-titleSans">Our</div>
+        <div class="Panel-titleSerif">mission</div>
+      </div>
+    </section>
+
+    <section class="Panel Panel--services">
+      <div class="Panel-titleImage"></div>
+      <div class="Panel-titleSans">What</div>
+      <div class="Panel-titleSerif">we offer</div>
+    </section>
+
+    <section class="Panel Panel--getInvolved">
+      <div class="Panel-titleImage"></div>
+      <div class="Panel-titleSans">How to</div>
+      <div class="Panel-titleSerif">get involved</div>
+    </section>
+
+    <section class="Panel Panel--cta">
+      Stay up-to-date
+    </section>
+
+    <section class="Panel Panel--team">
+      <div class="Panel-titleImage"></div>
+      <div class="Panel-titleSans">Our</div>
+      <div class="Panel-titleSerif">officers</div>
+    </section>
+
+    <section class="Panel">
+      <div class="Panel-titleImage"></div>
+      <div class="Panel-titleSans">Our</div>
+      <div class="Panel-titleSerif">board</div>
+    </section>
+
+    <section class="Panel">
+      <div class="Panel-titleImage"></div>
+      <div class="Panel-titleSans">valuable</div>
+      <div class="Panel-titleSerif">Sponsors and Partners</div>
+    </section>
+
+    <section class="Footer">
+      <div class="Logo Logo--half"></div>
+      <p class="Footer-content">
+        Bridging Portugal and Silicon Valley
+      </p>
+    </section>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
