Our mission section

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <section class="Hero Panel">
+    <section class="Hero">
       <div class="Logo"></div>
 
       <div class="Hero-title">
@@ -53,40 +53,63 @@
         <div class="Panel-titleSans">Our</div>
         <div class="Panel-titleSerif">mission</div>
       </div>
+      <div class="Panel-content">
+        <p class="Panel-text">
+          Support the establishment, development and growth of Portuguese ventures in Silicon Valley.
+        </p>
+      </div>
+      <div class="Panel-content">
+        <p class="Panel-text">
+          Join us if you need help or want to help.
+        </p>
+      </div>
+      <div class="Panel-content">
+        <div class="Button">join us</a>
+      </div>
     </section>
 
-    <section class="Panel Panel--services">
-      <div class="Panel-titleImage"></div>
-      <div class="Panel-titleSans">What</div>
-      <div class="Panel-titleSerif">we offer</div>
+    <section class="Panel Panel--blue Panel--services">
+      <div class="Panel-title">
+        <div class="Panel-titleImage"></div>
+        <div class="Panel-titleSans">What</div>
+        <div class="Panel-titleSerif">we offer</div>
+      </div>
     </section>
 
     <section class="Panel Panel--getInvolved">
-      <div class="Panel-titleImage"></div>
-      <div class="Panel-titleSans">How to</div>
-      <div class="Panel-titleSerif">get involved</div>
+      <div class="Panel-title">
+        <div class="Panel-titleImage"></div>
+        <div class="Panel-titleSans">How to</div>
+        <div class="Panel-titleSerif">get involved</div>
+      </div>
     </section>
 
     <section class="Panel Panel--cta">
       Stay up-to-date
     </section>
 
-    <section class="Panel Panel--team">
-      <div class="Panel-titleImage"></div>
-      <div class="Panel-titleSans">Our</div>
-      <div class="Panel-titleSerif">officers</div>
+    <section class="Panel Panel--blue">
+      <div class="Panel-title">
+        <div class="Panel-titleImage"></div>
+        <div class="Panel-titleSans">Our</div>
+        <div class="Panel-titleSerif">officers</div>
+      </div>
     </section>
 
     <section class="Panel">
-      <div class="Panel-titleImage"></div>
-      <div class="Panel-titleSans">Our</div>
-      <div class="Panel-titleSerif">board</div>
+      <div class="Panel-title">
+        <div class="Panel-titleImage"></div>
+        <div class="Panel-titleSans">Our</div>
+        <div class="Panel-titleSerif">board</div>
+      </div>
     </section>
 
     <section class="Panel">
-      <div class="Panel-titleImage"></div>
-      <div class="Panel-titleSans">valuable</div>
-      <div class="Panel-titleSerif">Sponsors and Partners</div>
+      <div class="Panel-title">
+        <div class="Panel-titleImage"></div>
+        <div class="Panel-titleSans">valuable</div>
+        <div class="Panel-titleSerif">Sponsors and Partners</div>
+      </div>
     </section>
 
     <section class="Footer">
