Background images and two column container

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,49 @@
         <div class="Panel-titleSans">What</div>
         <div class="Panel-titleSerif">we offer</div>
       </div>
+
+      <div class="TwoColumnContainer">
+        <div class="TwoColumnContainer-column">
+          <div class="TwoColumnContainer-title">
+            LANDING SUPPORT
+          </div>
+          <div class="Separator"></div>
+          <div class="TwoColumnContainer-content">
+            The first step is always the hardest one. We help ventures setup in Silicon Valley by giving them a better understanding of the work culture and business environment, but also with everything else from basic logistics to immigration issues.
+          </div>
+        </div>
+        <div class="TwoColumnContainer-column"></div>
+      </div>
+    </section>
+
+    <section class="Panel">
+      <div class="TwoColumnContainer">
+        <div class="TwoColumnContainer-column"></div>
+        <div class="TwoColumnContainer-column">
+          <div class="TwoColumnContainer-title">
+            MENTORSHIP
+          </div>
+          <div class="Separator"></div>
+          <div class="TwoColumnContainer-content">
+            Our list of experienced entrepreneurs and domain experts work with ventures to understand their goals and provide guidance and expertise in multiple areas. These experts offer their time and expertise because they often have a personal connection to Portugal or to the Portuguese Network. They want to be involved with the Portuguese tech scene. Many of them understand the cultural differences between the US and Portugal which helps fine tune their feedback.
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="Panel">
+      <div class="TwoColumnContainer">
+        <div class="TwoColumnContainer-column">
+          <div class="TwoColumnContainer-title">
+            NETWORKING
+          </div>
+          <div class="Separator Separator--blue"></div>
+          <div class="TwoColumnContainer-content">
+            Our network expands way beyond the Portuguese Diaspora. Ventures come to us at many different stages of development. We leverage the depth of our network to connect entrepreneurs with the right people at the right time.
+          </div>
+        </div>
+        <div class="TwoColumnContainer-column"></div>
+      </div>
     </section>
 
     <section class="Panel Panel--getInvolved">
@@ -82,10 +125,50 @@
         <div class="Panel-titleSans">How to</div>
         <div class="Panel-titleSerif">get involved</div>
       </div>
+
+      <div class="TwoColumnContainer">
+        <div class="TwoColumnContainer-column">
+          <div class="TwoColumnContainer-title">
+            ASK FOR HELP
+          </div>
+          <div class="Separator"></div>
+          <div class="TwoColumnContainer-content">
+            If you’re an entrepreneur or venture looking to move to Silicon Valley, or just get mentoring and learn from our experience in Silicon Valley, please reach out and we’ll get back to you with next steps.
+          </div>
+          <div class="Panel-content">
+            <div class="Button">REACH OUT</div>
+          </div>
+        </div>
+        <div class="TwoColumnContainer-column">
+          <div class="TwoColumnContainer-title">
+            RECOMMEND A MEMBER
+          </div>
+          <div class="Separator"></div>
+          <div class="TwoColumnContainer-content">
+            If you’re an experienced entrepreneur or domain expert and want to get involved with top-notch entrepreneurs, please reach out to us. If there’s a good fit, we’ll add you to our list of experts and connect you with ventures which can use your expertise.
+          </div>
+          <div class="Panel-content">
+            <div class="Button">RECOMMEND</div>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <section class="Panel Panel--cta">
-      Stay up-to-date
+    <section class="Panel Panel--blue Panel--cta">
+      <div class="TwoColumnContainer">
+        <div class="TwoColumnContainer-column">
+          <div class="TwoColumnContainer-title">
+            STAY UP-TO-DATE
+          </div>
+          <div class="Separator Separator--lightBlue"></div>
+          <div class="TwoColumnContainer-content">
+            If you’re an entrepreneur or venture looking to move to Silicon Valley, or just get mentoring and learn from our experience in Silicon Valley, please reach out and we’ll get back to you with next steps.
+          </div>
+        </div>
+
+        <div class="TwoColumnContainer-column">
+        </div>
+      </div>
     </section>
 
     <section class="Panel Panel--blue">
