--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
       </div>
     </section>
 
-    <section class="Panel">
+    <section class="Panel Panel--mentorship">
       <div class="TwoColumnContainer">
         <div class="TwoColumnContainer-column"></div>
         <div class="TwoColumnContainer-column">
@@ -104,7 +104,7 @@
       </div>
     </section>
 
-    <section class="Panel">
+    <section class="Panel Panel--networking">
       <div class="TwoColumnContainer">
         <div class="TwoColumnContainer-column">
           <div class="TwoColumnContainer-title">
