Board and officers grid

--- a/app/index.html
+++ b/app/index.html
@@ -177,6 +177,48 @@
         <div class="Panel-titleSans">Our</div>
         <div class="Panel-titleSerif">officers</div>
       </div>
+      <div class="Grid">
+        <div class="Grid-cell">
+          <div class="Person">
+            <img class="Person-image" src="../images/pictures/pedrovieira.png"/></img>
+            <div class="Person-information">
+              <div class="Person-name">PEDRO SANTOS VIEIRA</div>
+              <div class="Person-job">President</div>
+              <div class="Person-link"></div>
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="Person">
+            <img class="Person-image" src="../images/pictures/marcosa.png"/></img>
+            <div class="Person-information">
+              <div class="Person-name">MARCO DE SÁ</div>
+              <div class="Person-job">Vice-President</div>
+              <div class="Person-link"></div>
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="Person">
+            <img class="Person-image" src="../images/pictures/angelasimoes.png"/></img>
+            <div class="Person-information">
+              <div class="Person-name">ANGELA COSTA SIMÕES</div>
+              <div class="Person-job">Treasurer</div>
+              <div class="Person-link"></div>
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="Person">
+            <img class="Person-image" src="../images/pictures/vascomorais.png"/></img>
+            <div class="Person-information">
+              <div class="Person-name">VASCO HENRIQUE MORAIS</div>
+              <div class="Person-job">Secretary</div>
+              <div class="Person-link"></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="Panel">
@@ -184,6 +226,58 @@
         <div class="Panel-titleImage"></div>
         <div class="Panel-titleSans">Our</div>
         <div class="Panel-titleSerif">board</div>
+      </div>
+      <div class="Grid">
+        <div class="Grid-cell">
+          <div class="Person Person--dark">
+            <img class="Person-image" src="../images/pictures/linoamaral.png"/></img>
+            <div class="Person-information">
+              <div class="Person-name">LINO M. AMARAL</div>
+              <div class="Person-job">Luso-American Life Insurance Society</div>
+              <div class="Person-link"></div>
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="Person Person--dark">
+            <img class="Person-image" src="../images/pictures/nunogoncalves.png"/></img>
+            <div class="Person-information">
+              <div class="Person-name">NUNO GONÇALVES PEDRO</div>
+              <div class="Person-job">Strive Capital</div>
+              <div class="Person-link"></div>
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="Person Person--dark">
+            <img class="Person-image" src="../images/pictures/torbenrankine.png"/></img>
+            <div class="Person-information">
+              <div class="Person-name">TORBEN RANKINE</div>
+              <div class="Person-job">Leadership Business Consulting</div>
+              <div class="Person-link"></div>
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="Person Person--dark">
+            <img class="Person-image" src="../images/pictures/joaometelo.png"/></img>
+            <div class="Person-information">
+              <div class="Person-name">JOÃO METELO</div>
+              <div class="Person-job">Principle Power</div>
+              <div class="Person-link"></div>
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="Person Person--dark">
+            <img class="Person-image" src="../images/pictures/nunomathias.png"/></img>
+            <div class="Person-information">
+              <div class="Person-name">NUNO MATHIAS</div>
+              <div class="Person-job">Consulate General of Portugal in Silicon Valley</div>
+              <div class="Person-link"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
