--- a/app/index.html
+++ b/app/index.html
@@ -167,6 +167,23 @@
         </div>
 
         <div class="TwoColumnContainer-column">
+          <div class="InputGroup InputGroup--bottomBorder">
+            <div class="InputGroup-column">
+              <label class="InputGroup-label" for="firstName">First Name</label>
+              <input class="InputGroup-input" type="text" id="firstName">
+            </div>
+            <div class="InputGroup-column">
+              <label class="InputGroup-label" for="lastName">Last Name</label>
+              <input class="InputGroup-input" type="text" id="lastName">
+            </div>
+          </div>
+          <div class="InputGroup">
+            <div class="InputGroup-column">
+              <label class="InputGroup-label" for="email">Email</label>
+              <input class="InputGroup-input" type="email" id="email">
+            </div>
+          </div>
+          <div class="Button Button--outline">join us</a>
         </div>
       </div>
     </section>
