Multiple style fixes

--- a/app/index.html
+++ b/app/index.html
@@ -132,7 +132,7 @@
             ASK FOR HELP
           </div>
           <div class="Separator"></div>
-          <div class="TwoColumnContainer-content">
+          <div class="TwoColumnContainer-contentBlack">
             If you’re an entrepreneur or venture looking to move to Silicon Valley, or just get mentoring and learn from our experience in Silicon Valley, please reach out and we’ll get back to you with next steps.
           </div>
           <div class="Panel-content">
@@ -144,7 +144,7 @@
             RECOMMEND A MEMBER
           </div>
           <div class="Separator"></div>
-          <div class="TwoColumnContainer-content">
+          <div class="TwoColumnContainer-contentBlack">
             If you’re an experienced entrepreneur or domain expert and want to get involved with top-notch entrepreneurs, please reach out to us. If there’s a good fit, we’ll add you to our list of experts and connect you with ventures which can use your expertise.
           </div>
           <div class="Panel-content">
@@ -226,7 +226,7 @@
           </div>
         </div>
         <div class="Grid-cell">
-          <div class="Person">
+          <div class="Person Person--noMargin">
             <img class="Person-image" src="../images/pictures/vascomorais.png"/></img>
             <div class="Person-information">
               <div class="Person-name">VASCO HENRIQUE MORAIS</div>
@@ -286,7 +286,7 @@
           </div>
         </div>
         <div class="Grid-cell">
-          <div class="Person Person--dark">
+          <div class="Person Person--dark Person--noMargin">
             <img class="Person-image" src="../images/pictures/nunomathias.png"/></img>
             <div class="Person-information">
               <div class="Person-name">NUNO MATHIAS</div>
