--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,11 @@
       </div>
     </section>
 
-    <section class="Panel Panel--blue Panel--services">
+    <section class="Panel Panel--blue">
+      <div class="Background">
+        <div class="BackgroundColumn BackgroundColumn--blue"></div>
+        <div class="BackgroundColumn BackgroundColumn--imageServices"></div>
+      </div>
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
         <div class="Panel-titleSans">What</div>
@@ -89,7 +93,11 @@
       </div>
     </section>
 
-    <section class="Panel Panel--mentorship">
+    <section class="Panel">
+      <div class="Background">
+        <div class="BackgroundColumn BackgroundColumn--imageMentorship BackgroundColumn--rightAlign"></div>
+        <div class="BackgroundColumn BackgroundColumn--white"></div>
+      </div>
       <div class="TwoColumnContainer">
         <div class="TwoColumnContainer-column"></div>
         <div class="TwoColumnContainer-column">
@@ -104,7 +112,11 @@
       </div>
     </section>
 
-    <section class="Panel Panel--networking">
+    <section class="Panel Panel--blue">
+      <div class="Background">
+        <div class="BackgroundColumn BackgroundColumn--green"></div>
+        <div class="BackgroundColumn BackgroundColumn--imageNetworking"></div>
+      </div>
       <div class="TwoColumnContainer">
         <div class="TwoColumnContainer-column">
           <div class="TwoColumnContainer-title">
@@ -188,7 +200,7 @@
       </div>
     </section>
 
-    <section class="Panel Panel--blue">
+    <section class="Panel Panel--blue Panel--solidBlue">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
         <div class="Panel-titleSans">Our</div>
