--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
       </p>
     </section>
 
-    <section class="Panel">
+    <section class="Panel Panel--solidWhite">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
         <div class="Panel-titleSans">Our</div>
@@ -131,7 +131,7 @@
       </div>
     </section>
 
-    <section class="Panel Panel--getInvolved">
+    <section class="Panel Panel--solidWhite">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
         <div class="Panel-titleSans">How to</div>
@@ -209,7 +209,7 @@
       <div class="Grid">
         <div class="Grid-cell">
           <div class="Person">
-            <img class="Person-image" src="../images/pedrovieira.png"/></img>
+            <img class="Person-image" src="images/pedrovieira.png"/></img>
             <div class="Person-information">
               <div class="Person-name">PEDRO SANTOS VIEIRA</div>
               <div class="Person-job">President</div>
@@ -219,7 +219,7 @@
         </div>
         <div class="Grid-cell">
           <div class="Person">
-            <img class="Person-image" src="../images/marcosa.png"/></img>
+            <img class="Person-image" src="images/marcosa.png"/></img>
             <div class="Person-information">
               <div class="Person-name">MARCO DE SÁ</div>
               <div class="Person-job">Vice-President</div>
@@ -229,7 +229,7 @@
         </div>
         <div class="Grid-cell">
           <div class="Person">
-            <img class="Person-image" src="../images/angelasimoes.png"/></img>
+            <img class="Person-image" src="images/angelasimoes.png"/></img>
             <div class="Person-information">
               <div class="Person-name">ANGELA COSTA SIMÕES</div>
               <div class="Person-job">Treasurer</div>
@@ -239,7 +239,7 @@
         </div>
         <div class="Grid-cell">
           <div class="Person Person--noMargin">
-            <img class="Person-image" src="../images/vascomorais.png"/></img>
+            <img class="Person-image" src="images/vascomorais.png"/></img>
             <div class="Person-information">
               <div class="Person-name">VASCO HENRIQUE MORAIS</div>
               <div class="Person-job">Secretary</div>
@@ -250,7 +250,7 @@
       </div>
     </section>
 
-    <section class="Panel">
+    <section class="Panel Panel--solidWhite">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
         <div class="Panel-titleSans">Our</div>
@@ -259,7 +259,7 @@
       <div class="Grid">
         <div class="Grid-cell">
           <div class="Person Person--dark">
-            <img class="Person-image" src="../images/linoamaral.png"/></img>
+            <img class="Person-image" src="images/linoamaral.png"/></img>
             <div class="Person-information">
               <div class="Person-name">LINO M. AMARAL</div>
               <div class="Person-job">Luso-American Life Insurance Society</div>
@@ -269,7 +269,7 @@
         </div>
         <div class="Grid-cell">
           <div class="Person Person--dark">
-            <img class="Person-image" src="../images/nunogoncalves.png"/></img>
+            <img class="Person-image" src="images/nunogoncalves.png"/></img>
             <div class="Person-information">
               <div class="Person-name">NUNO GONÇALVES PEDRO</div>
               <div class="Person-job">Strive Capital</div>
@@ -279,7 +279,7 @@
         </div>
         <div class="Grid-cell">
           <div class="Person Person--dark">
-            <img class="Person-image" src="../images/torbenrankine.png"/></img>
+            <img class="Person-image" src="images/torbenrankine.png"/></img>
             <div class="Person-information">
               <div class="Person-name">TORBEN RANKINE</div>
               <div class="Person-job">Leadership Business Consulting</div>
@@ -289,7 +289,7 @@
         </div>
         <div class="Grid-cell">
           <div class="Person Person--dark">
-            <img class="Person-image" src="../images/joaometelo.png"/></img>
+            <img class="Person-image" src="images/joaometelo.png"/></img>
             <div class="Person-information">
               <div class="Person-name">JOÃO METELO</div>
               <div class="Person-job">Principle Power</div>
@@ -299,7 +299,7 @@
         </div>
         <div class="Grid-cell">
           <div class="Person Person--dark Person--noMargin">
-            <img class="Person-image" src="../images/nunomathias.png"/></img>
+            <img class="Person-image" src="images/nunomathias.png"/></img>
             <div class="Person-information">
               <div class="Person-name">NUNO MATHIAS</div>
               <div class="Person-job">Consulate General of Portugal in Silicon Valley</div>
@@ -310,7 +310,7 @@
       </div>
     </section>
 
-    <section class="Panel">
+    <section class="Panel Panel--solidWhite">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
         <div class="Panel-titleSans">valuable</div>
