--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <script src="https://use.typekit.net/ukj1ccd.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
