Several fixes and new board member

--- a/app/index.html
+++ b/app/index.html
@@ -178,25 +178,32 @@
           </div>
         </div>
 
-        <div class="TwoColumnContainer-column">
+        <form class="TwoColumnContainer-column"
+          action="//west-to-west.us11.list-manage.com/subscribe/post?u=9dbdf3727410aa8081f856c30&amp;id=c9cd736cc1"
+          method="post"
+          id="mc-embedded-subscribe-form"
+          name="mc-embedded-subscribe-form"
+          class="NewsletterForm"
+          target="_blank"
+          novalidate>
           <div class="InputGroup InputGroup--bottomBorder">
             <div class="InputGroup-column">
               <label class="InputGroup-label" for="firstName">First Name</label>
-              <input class="InputGroup-input" type="text" id="firstName">
+              <input class="InputGroup-input" type="text" name="FNAME" id="mce-FNAME">
             </div>
             <div class="InputGroup-column">
               <label class="InputGroup-label" for="lastName">Last Name</label>
-              <input class="InputGroup-input" type="text" id="lastName">
+              <input class="InputGroup-input" type="text" name="LNAME" id="mce-LNAME">
             </div>
           </div>
           <div class="InputGroup">
             <div class="InputGroup-column">
               <label class="InputGroup-label" for="email">Email</label>
-              <input class="InputGroup-input" type="email" id="email">
+              <input class="InputGroup-input" type="email" name="EMAIL" id="mce-EMAIL">
             </div>
           </div>
-          <div class="Button Button--outline">join us</a>
-        </div>
+          <button type="submit" class="Button Button--outline">join us</button>
+        </form>
       </div>
     </section>
 
@@ -212,7 +219,7 @@
             <img class="Person-image" src="images/pedrovieira.png"/></img>
             <div class="Person-information">
               <div class="Person-name">PEDRO SANTOS VIEIRA</div>
-              <div class="Person-job">President</div>
+              <div class="Person-company">President</div>
               <div class="Person-link"></div>
             </div>
           </div>
@@ -222,7 +229,7 @@
             <img class="Person-image" src="images/marcosa.png"/></img>
             <div class="Person-information">
               <div class="Person-name">MARCO DE SÁ</div>
-              <div class="Person-job">Vice-President</div>
+              <div class="Person-company">Vice-President</div>
               <div class="Person-link"></div>
             </div>
           </div>
@@ -232,7 +239,7 @@
             <img class="Person-image" src="images/angelasimoes.png"/></img>
             <div class="Person-information">
               <div class="Person-name">ANGELA COSTA SIMÕES</div>
-              <div class="Person-job">Treasurer</div>
+              <div class="Person-company">Treasurer</div>
               <div class="Person-link"></div>
             </div>
           </div>
@@ -242,7 +249,7 @@
             <img class="Person-image" src="images/vascomorais.png"/></img>
             <div class="Person-information">
               <div class="Person-name">VASCO HENRIQUE MORAIS</div>
-              <div class="Person-job">Secretary</div>
+              <div class="Person-company">Secretary</div>
               <div class="Person-link"></div>
             </div>
           </div>
@@ -262,8 +269,9 @@
             <img class="Person-image" src="images/linoamaral.png"/></img>
             <div class="Person-information">
               <div class="Person-name">LINO M. AMARAL</div>
-              <div class="Person-job">Luso-American Life Insurance Society</div>
-              <div class="Person-link"></div>
+              <div class="Person-company">Luso-American Life Insurance Society</div>
+              <div class="Person-job">CEO</div>
+              <a class="Person-link" target="_blank"><img src="images/linkedin.png"/></a>
             </div>
           </div>
         </div>
@@ -272,8 +280,9 @@
             <img class="Person-image" src="images/nunogoncalves.png"/></img>
             <div class="Person-information">
               <div class="Person-name">NUNO GONÇALVES PEDRO</div>
-              <div class="Person-job">Strive Capital</div>
-              <div class="Person-link"></div>
+              <div class="Person-company">Strive Capital</div>
+              <div class="Person-job">Managing Partner</div>
+              <a class="Person-link" target="_blank"><img src="images/linkedin.png"/></a>
             </div>
           </div>
         </div>
@@ -282,8 +291,9 @@
             <img class="Person-image" src="images/torbenrankine.png"/></img>
             <div class="Person-information">
               <div class="Person-name">TORBEN RANKINE</div>
-              <div class="Person-job">Leadership Business Consulting</div>
-              <div class="Person-link"></div>
+              <div class="Person-company">Leadership Business Consulting</div>
+              <div class="Person-job">Country Manager</div>
+              <a class="Person-link" target="_blank"><img src="images/linkedin.png"/></a>
             </div>
           </div>
         </div>
@@ -292,8 +302,9 @@
             <img class="Person-image" src="images/joaometelo.png"/></img>
             <div class="Person-information">
               <div class="Person-name">JOÃO METELO</div>
-              <div class="Person-job">Principle Power</div>
-              <div class="Person-link"></div>
+              <div class="Person-company">Principle Power</div>
+              <div class="Person-job">CEO</div>
+              <a class="Person-link" target="_blank"><img src="images/linkedin.png"/></a>
             </div>
           </div>
         </div>
@@ -302,8 +313,20 @@
             <img class="Person-image" src="images/nunomathias.png"/></img>
             <div class="Person-information">
               <div class="Person-name">NUNO MATHIAS</div>
-              <div class="Person-job">Consulate General of Portugal in Silicon Valley</div>
-              <div class="Person-link"></div>
+              <div class="Person-company">Consulate General of Portugal in Silicon Valley</div>
+              <div class="Person-job">Consul General</div>
+              <a class="Person-link" target="_blank"><img src="images/linkedin.png"/></a>
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="Person Person--dark Person--noMargin">
+            <img class="Person-image" src="images/bernardoseabra.png"/></img>
+            <div class="Person-information">
+              <div class="Person-name">Bernardo de Seabra</div>
+              <div class="Person-company">BrightRoll</div>
+              <div class="Person-job">Software Engineer</div>
+              <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/bseabra"><img src="images/linkedin.png"/></a>
             </div>
           </div>
         </div>
@@ -315,6 +338,11 @@
         <div class="Panel-titleImage"></div>
         <div class="Panel-titleSans">valuable</div>
         <div class="Panel-titleSerif">Sponsors and Partners</div>
+      </div>
+      <div class="SponsorGrid">
+        <img class="SponsorGrid-cell" src="images/portugal.png">
+        <img class="SponsorGrid-cell" src="images/lusoamerican.png">
+        <img class="SponsorGrid-cell" src="images/startup.png">
       </div>
     </section>
 
