--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <p class="Hero-content">
-        Portuguese entrepreneurs discovered half of the world during the age of discovery. Now it's time to help the world discover portugal and its modern-day entrepreneurs.
+        Portuguese entrepreneurs discovered half of the world during the age of discovery. Now it's time to help the world discover Portugal and its modern-day entrepreneurs.
       </p>
     </section>
 
@@ -55,7 +55,7 @@
       </div>
       <div class="Panel-content">
         <p class="Panel-text">
-          Support the establishment, development and growth of Portuguese ventures in Silicon Valley.
+          Create and support a thriving environment for Portuguese entrepreneurship in San Francisco.
         </p>
       </div>
       <div class="Panel-content">
@@ -86,7 +86,7 @@
           </div>
           <div class="Separator"></div>
           <div class="TwoColumnContainer-contentWhite">
-            The first step is always the hardest one. We help ventures setup in Silicon Valley by giving them a better understanding of the work culture and business environment, but also with everything else from basic logistics to immigration issues.
+            The first step is always the hardest one. We help ventures setup in Silicon Valley by giving them a better understanding of the work culture and business environment. We also help them get support with everything else from basic logistics to immigration issues.
           </div>
         </div>
         <div class="TwoColumnContainer-column"></div>
@@ -124,7 +124,7 @@
           </div>
           <div class="Separator Separator--blue"></div>
           <div class="TwoColumnContainer-contentWhite">
-            Our network expands way beyond the Portuguese Diaspora. Ventures come to us at many different stages of development. We leverage the depth of our network to connect entrepreneurs with the right people at the right time.
+            Our network expands way beyond the Portuguese Diáspora. Ventures come to us at many different stages of development. We leverage the depth of our network to connect entrepreneurs with the right people at the right time.
           </div>
         </div>
         <div class="TwoColumnContainer-column"></div>
@@ -153,7 +153,7 @@
         </div>
         <div class="TwoColumnContainer-column">
           <div class="TwoColumnContainer-title">
-            RECOMMEND A MEMBER
+            Offer help
           </div>
           <div class="Separator"></div>
           <div class="TwoColumnContainer-contentBlack">
@@ -174,7 +174,7 @@
           </div>
           <div class="Separator Separator--lightBlue"></div>
           <div class="TwoColumnContainer-contentWhite">
-            If you’re an entrepreneur or venture looking to move to Silicon Valley, or just get mentoring and learn from our experience in Silicon Valley, please reach out and we’ll get back to you with next steps.
+            Signup for our newsletter so you can get updates on news, events and relevant content from our blog.
           </div>
         </div>
 
@@ -219,8 +219,8 @@
             <img class="Person-image" src="images/pedrovieira.png"/></img>
             <div class="Person-information">
               <div class="Person-name">PEDRO SANTOS VIEIRA</div>
-              <div class="Person-company">President</div>
-              <div class="Person-link"></div>
+              <div class="Person-company">VP, Data and Science @ GoodGuide</div>
+              <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/santosvieira"><img src="images/linkedin.png"/></a>
             </div>
           </div>
         </div>
@@ -229,8 +229,8 @@
             <img class="Person-image" src="images/marcosa.png"/></img>
             <div class="Person-information">
               <div class="Person-name">MARCO DE SÁ</div>
-              <div class="Person-company">Vice-President</div>
-              <div class="Person-link"></div>
+              <div class="Person-company">Senior UX Researcher, Twitter</div>
+              <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/marcodesa"><img src="images/linkedin.png"/></a>
             </div>
           </div>
         </div>
@@ -239,8 +239,8 @@
             <img class="Person-image" src="images/angelasimoes.png"/></img>
             <div class="Person-information">
               <div class="Person-name">ANGELA COSTA SIMÕES</div>
-              <div class="Person-company">Treasurer</div>
-              <div class="Person-link"></div>
+              <div class="Person-company">Founder @ Red Roof Industries</div>
+              <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/angelacostasimoes"><img src="images/linkedin.png"/></a>
             </div>
           </div>
         </div>
@@ -249,8 +249,8 @@
             <img class="Person-image" src="images/vascomorais.png"/></img>
             <div class="Person-information">
               <div class="Person-name">VASCO HENRIQUE MORAIS</div>
-              <div class="Person-company">Secretary</div>
-              <div class="Person-link"></div>
+              <div class="Person-company">General Counsel @ ATEL Capital Group</div>
+              <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/vasco-morais/0/89/610"><img src="images/linkedin.png"/></a>
             </div>
           </div>
         </div>
@@ -313,7 +313,7 @@
             <img class="Person-image" src="images/nunomathias.png"/></img>
             <div class="Person-information">
               <div class="Person-name">NUNO MATHIAS</div>
-              <div class="Person-company">Consulate General of Portugal in Silicon Valley</div>
+              <div class="Person-company">Consulate General of Portugal in San Francisco</div>
               <div class="Person-job">Consul General</div>
               <a class="Person-link" target="_blank"><img src="images/linkedin.png"/></a>
             </div>
